adfls man page: correct a typo.

--- a/doc/adfls.1
+++ b/doc/adfls.1
@@ -20,7 +20,7 @@ contents of another directory or just the specified file (or a link).
 .PP
 When called with the \fB-l\fR option, it shows the following properties (in
 that order): access permissions, size (by default in bytes, in blocks if
-ordered so with \fB-b\R), date and time, type, name and (for
+ordered so with \fB-b\fR), date and time, type, name and (for
 soft-links) name of the real entry (which can be a file or
 a directory).
 
@@ -58,7 +58,7 @@ Show version.
 .SH EXAMPLES
 \fBadfls mydisk.adf\fR
 .RS
-Show list of entries in the main directory  on the volume 0 of mydisk.adf
+Show list of entries in the main directory on the volume 0 of mydisk.adf
 .RE
 
 \fBadfls -lb -p 1 mydisk.adf devs libs\fR
