--- a/packaging/debian/changelog
+++ b/packaging/debian/changelog
@@ -1,3 +1,15 @@
+adflib (0.10.5-1) unstable; urgency=medium
+
+  * fixed opening small (smaller than floppies) HDF files.
+  * added a new function for getting entry using sector number.
+  * adfinfo: allow inspecting entries deeper in the directory tree,
+    added showing info about links.
+  * adfls: a new utility for showing volume contents.
+  * some internal improvements (ie. refactoring, more tests).
+
+ -- Tomasz Wolak <tomas.wolak@gmail.com>  Mon, 22 Sep 2025 15:54:44 +0100
+
+
 adflib (0.10.4-1) unstable; urgency=medium
 
   * unadf on Windows: fix extracting binary files with -p (pipe).
